Added script.js and updated container-main

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
 </head>
   
@@ -11,8 +13,10 @@
     <!-- Header Welcome Page   -->
         
     <div class="main" id="container-main">
-      <h1>  MEET THE TEAM </h1>
-      <p id="team_contact"> CONTACT US </p>
+        <div class='fade-in-header' id='container-main'>
+          <h1>  HI, I'M MARK. </h1>
+          <p id="team_contact"> ASPIRING TECH ENTHUSIAST </p>
+        </div>
     </div>
 
   </div>
@@ -30,7 +34,6 @@
       <div class="right-container-odd"> 
         <div class="right-content-odd"> 
           <h2> MARKLEXTER ALAS <a href="mailto: marklexteralas@gmail.com" target="_top"> <img src="/images/email.png" id="contact"> </a> </h2>
-          <h3> SCIENTIST </h3>
           <p> marklexteralas@gmail.com </p> 
         </div>
       </div>
