Updated header and added nav bar. media queries added for responsiveness

--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 </head>
   
   <div class="flex-container">
-        
+
+    <!-- Navigation -->
+
+    <div id='nav-content'>
+      <img src='/images/me.png'>
+      <div id='nav-text'>
+        <p> MARKLEXTER ALAS </p>
+      </div>
+    </div>
+    <nav>
+      <a href="#">About</a>
+      <a href="#">Projects</a>
+      <a href="#">Contact</a>
+    </nav>
+
     <!-- Header Welcome Page   -->
         
     <div class="main" id="container-main">
-        <div class='fade-in-header' id='container-main'>
+        <div class='fade-in-header1' id='container-main'>
           <h1>  HI, I'M MARK. </h1>
-          <p id="team_contact"> ASPIRING TECH ENTHUSIAST </p>
+        </div>
+        <div class='fade-in-header2' id='container-main'>
+          <p id="team_contact"> TECH ENTHUSIAST AND ASPIRING DATA ANALYST </p>
         </div>
     </div>
 
